# HyperRA

./: CMakeLists.txt  README.md  export_to_torchscript.py  export_tokenizer.py  load_models.py  main.cpp  main_npu_sim.cpp  plots.py  real_texts.txt  results.csv  results_npu.csv  workloads.py
